# bubbly

./: .gitignore  Makefile  README.md  clean.awk  edalize_build.py  pyproject.toml  repro.json10  repro.json11  repro.json12  repro.json13  repro.json14  repro.json2  repro.json4  repro.json5  repro.json6  repro.json7  repro.json8  repro.json9  repro3.json  riscv_arch_test_tb.sv
board/arty/: Arty-A7-100-Master.xdc  pll.sv  (+2 more)
riscv-config/: Makefile  isa.yaml  isa_checked.yaml  platform.yaml  platform_checked.yaml
riscv-tests/: NOTE  config.ini
riscv_tests/: .gitignore  Makefile  pyproject.toml
soft/rust/: Cargo.toml  Makefile  gen_cfgmem.tcl  link.x
soft/rust/.cargo/: config
soft/rust/src/: dhcp.rs  ethernet_mmio.rs  iface.rs  leds.rs  main.rs  mdns.rs  mtime.rs  netboot.rs  ping.rs  socket.rs  start_and_fault_vectors.rs  start_and_trap_vectors.rs  start_and_traps.rs
soft/rust/src/socket/: icmp.rs  udp.rs
src/: axi4lite.sv  axi4lite.svh  bram.sv  bram.v  flash_reader.sv  flash_reader.v  global.svh  pll.v  qspi_flash.sv  qspi_flash.v  qspi_flash_tb.v  skid_buf_ctl.sv  skid_buf_data.sv  spi_slave.sv  spi_slave.v  spi_slave_tb.v  top.sv  top.v
test_rs/: .gitignore  Cargo.toml  Makefile  link.x  load_elf.py  pyproject.toml  rust_test_tb.sv  rust_tests.py
test_rs/.cargo/: config.toml
test_rs/src/: dbg_print.rs  lib.rs  start.rs  trap.rs
test_rs/trap_handler_macro/: Cargo.toml
test_rs/trap_handler_macro/src/: lib.rs
tools/: boot_hw.tcl  build_bitstream.tcl  flash_cfgmem.tcl  program_bitstream.tcl
tools/ethboot/: Cargo.toml
tools/ethboot/src/: main.rs
(+164 files in other folders)
