[package]
name = "ethboot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
anyhow = "1.0.59"
socket2 = { version = "0.4.4", features = ["all"] }
libc = "0.2.126"
default-net = "0.11.0"
xxhash-rust = { version = "0.8.5", features = ["xxh64"], default-features = false }
